Fix gaps by using absolute positioning for hero sections

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -7,9 +7,11 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	margin-top: -100px !important;
-	padding-top: 100px !important;
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
 
 	&:before {
 		content: "";
